--- a/apps/sources/nginx.yaml
+++ b/apps/sources/nginx.yaml
@@ -1,8 +1,8 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cert-manager
+  name: nginx
   namespace: flux-system
 spec:
   interval: 1h
-  url: https://charts.jetstack.io
+  url: https://charts.bitnami.com/bitnami
