--- a/clusters/merox/cert-manager-config.yaml
+++ b/clusters/merox/cert-manager-config.yaml
@@ -1,19 +1,19 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: infrastructure
+  name: cert-manager-config
   namespace: flux-system
 spec:
   interval: 10m0s
   dependsOn:
-    - name: cert-manager-config
+    - name: cert-manager-install
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./infrastructure
+  path: ./infrastructure/configs/cert-manager
   prune: true
   wait: true
-  timeout: 10m
+  timeout: 5m
   decryption:
     provider: sops
     secretRef:
