--- a/clusters/merox/cert-manager-install.yaml
+++ b/clusters/merox/cert-manager-install.yaml
@@ -1,20 +1,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: infrastructure
+  name: cert-manager-install
   namespace: flux-system
 spec:
   interval: 10m0s
-  dependsOn:
-    - name: cert-manager-config
   sourceRef:
     kind: GitRepository
     name: flux-system
-  path: ./infrastructure
+  path: ./infrastructure/cert-manager-install
   prune: true
   wait: true
   timeout: 10m
-  decryption:
-    provider: sops
-    secretRef:
-      name: sops-age
