--- a/infrastructure/kustomization.yaml
+++ b/infrastructure/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - base
-  - sources
-  - configs
+  - base/namespaces/longhorn-system.yaml
+  - base/namespaces/rancher-system.yaml
+  - sources/cilium.yaml
+  - configs/cilium
