--- a/infrastructure/cert-manager-install/release.yaml
+++ b/infrastructure/cert-manager-install/release.yaml
@@ -1,4 +1,4 @@
-apiVersion: helm.toolkit.fluxcd.io/v2
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: cert-manager
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: cert-manager
-      version: "v1.16.x"
+      version: "v1.16.0"
       sourceRef:
         kind: HelmRepository
         name: cert-manager
