--- a/infrastructure/cert-manager-install/kustomization.yaml
+++ b/infrastructure/cert-manager-install/kustomization.yaml
@@ -2,4 +2,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../base/namespaces/cert-manager.yaml
+  - helm-repository.yaml
   - release.yaml
